cluster/apps/splunk/standalone/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: standalone-splunk-ingress
  namespace: splunk-dev
  labels:
    app: standalone-splunk-ingress
  annotations:
    ingress.kubernetes.io/secure-backends: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/appName: "splunk"
    hajimari.io/enable: "true"
    hajimari.io/icon: "table-search"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "splunk.${SECRET_DOMAIN}"
      secretName: "standalone-splunk-ingress-tls"
  rules:
    - host: "splunk.${SECRET_DOMAIN}"
      http:
        paths:
          - path: ""
            pathType: ImplementationSpecific
            backend:
              service:
                name: splunk-standalone-dev-standalone-service
                port:
                  number: 8000
